--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "companion-module-build": "node ./node_modules/@companion-module/base/dist/entrypoint.js"
   },
   "license": "MIT",
   "dependencies": {
-    "@companion-module/base": "~1.11.3",
+    "@companion-module/base": "^1.13.5",
     "jimp": "^1.6.0",
     "osc": "^2.4.4"
   }
